--- a/Split_It/packages.config
+++ b/Split_It/packages.config
@@ -7,5 +7,6 @@
   <package id="RestSharp" version="104.4.0" targetFramework="wp80" />
   <package id="sqlite-net" version="1.0.8" targetFramework="wp80" />
   <package id="sqlite-net-wp8" version="3.8.5" targetFramework="wp80" />
+  <package id="WP-JetImagLoader" version="0.8.6" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
 </packages>
