work on shifting to android style add expense

--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="Converter\MyAppJetImageLoaderConverter.cs" />
     <Compile Include="Model\AmountSplit.cs" />
+    <Compile Include="Model\ExpenseType.cs" />
     <Compile Include="Request\UpdateUserRequest.cs" />
     <Compile Include="UserControls\AdControl.xaml.cs">
       <DependentUpon>AdControl.xaml</DependentUpon>
