--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Request\CurrentUserRequest.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="SQLiteAsync.cs" />
+    <Compile Include="UserControls\SelectPayeePopUpControl.xaml.cs">
+      <DependentUpon>SelectPayeePopUpControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserDetails.xaml.cs">
       <DependentUpon>UserDetails.xaml</DependentUpon>
     </Compile>
@@ -262,6 +265,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\SelectPayeePopUpControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
