--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Add_Expense_Pages\EditExpense.xaml.cs">
       <DependentUpon>EditExpense.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converter\AddExpensePaidByConverter.cs" />
     <Compile Include="Converter\MyAppJetImageLoaderConverter.cs" />
     <Compile Include="Model\AmountSplit.cs" />
     <Compile Include="Model\ExpenseType.cs" />
