settle up in groups and can go back bug fixes

--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Request\CurrentUserRequest.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="SQLiteAsync.cs" />
+    <Compile Include="UserControls\GroupSettleUpUserSelector.xaml.cs">
+      <DependentUpon>GroupSettleUpUserSelector.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\MultiplePayeeInputPopUpControl.xaml.cs">
       <DependentUpon>MultiplePayeeInputPopUpControl.xaml</DependentUpon>
     </Compile>
@@ -271,6 +274,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\GroupSettleUpUserSelector.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
