--- a/Split_It/Split_It/project.json
+++ b/Split_It/Split_It/project.json
@@ -1,5 +1,7 @@
 ﻿{
   "dependencies": {
+    "FubarCoder.RestSharp.Portable": "3.1.3",
+    "FubarCoder.RestSharp.Portable.OAuth": "3.1.3",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MvvmLight": "5.2.0",
