--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Service\LoginService.cs" />
     <Compile Include="Service\WebviewService.cs" />
     <Compile Include="Utils\Constants.cs" />
+    <Compile Include="Utils\Util.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
