--- a/Split_It/Split_It/project.json
+++ b/Split_It/Split_It/project.json
@@ -5,7 +5,8 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MvvmLight": "5.2.0",
-    "Newtonsoft.Json": "8.0.3"
+    "Newtonsoft.Json": "8.0.3",
+    "WinUX.UWP": "1.3.0"
   },
   "frameworks": {
     "uap10.0": {}
