JSON rule and getcurrentuser

--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Service\WebviewService.cs" />
     <Compile Include="Utils\AppState.cs" />
     <Compile Include="Utils\Constants.cs" />
+    <Compile Include="Utils\DeliminatorSeparatedPropertyNamesContractResolver.cs" />
     <Compile Include="Utils\Util.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
