--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -106,6 +106,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Group.cs" />
+    <Compile Include="Model\GroupDebt.cs" />
     <Compile Include="Model\UserBalance.cs" />
     <Compile Include="Model\Currency.cs" />
     <Compile Include="Model\Friend.cs" />
