--- a/Split_It/Split_It/project.json
+++ b/Split_It/Split_It/project.json
@@ -6,6 +6,7 @@
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MvvmLight": "5.2.0",
     "Newtonsoft.Json": "8.0.3",
+    "PullToRefresh.UWP": "0.3.4",
     "WinUX.UWP": "1.3.0"
   },
   "frameworks": {
