--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -99,6 +99,7 @@
     </Compile>
     <Compile Include="Converter\UserBalance\BaseConverter.cs" />
     <Compile Include="Converter\UserBalance\TextAmountConverter.cs" />
+    <Compile Include="Converter\UserBalance\TextColorConverter.cs" />
     <Compile Include="Converter\WebviewNavigationConverter.cs" />
     <Compile Include="Design\DesignDataService.cs" />
     <Compile Include="LoginPage.xaml.cs">
