--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -97,9 +97,11 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converter\UserBalance\AmountConverter.cs" />
     <Compile Include="Converter\UserBalance\BaseConverter.cs" />
-    <Compile Include="Converter\UserBalance\TextAmountConverter.cs" />
+    <Compile Include="Converter\UserBalance\TextConverter.cs" />
     <Compile Include="Converter\UserBalance\TextColorConverter.cs" />
+    <Compile Include="Converter\UserBalance\VisibilityConverter.cs" />
     <Compile Include="Converter\WebviewNavigationConverter.cs" />
     <Compile Include="Design\DesignDataService.cs" />
     <Compile Include="LoginPage.xaml.cs">
