data dump for group design

--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -91,6 +91,9 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="Data\categories.json" />
     <None Include="Data\currencies.json" />
+    <Content Include="Data\sample_group.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +142,7 @@
     <None Include="Split_It_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Images\groupIcon.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
