--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -100,6 +100,11 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converter\GroupBalance\AmountConverter.cs" />
+    <Compile Include="Converter\GroupBalance\BaseMemberConverter.cs" />
+    <Compile Include="Converter\GroupBalance\TextColorConverter.cs" />
+    <Compile Include="Converter\GroupBalance\TextConverter.cs" />
+    <Compile Include="Converter\GroupBalance\VisibilityConverter.cs" />
     <Compile Include="Converter\UserBalance\AmountConverter.cs" />
     <Compile Include="Converter\UserBalance\BaseConverter.cs" />
     <Compile Include="Converter\UserBalance\TextConverter.cs" />
