--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -102,9 +102,14 @@
     </Compile>
     <Compile Include="Converter\Balance\AmountConverter.cs" />
     <Compile Include="Converter\Balance\BaseConverter.cs" />
+    <Compile Include="Converter\Summary\BaseGroupSummaryConverter.cs" />
     <Compile Include="Converter\Balance\TextConverter.cs" />
     <Compile Include="Converter\Balance\TextColorConverter.cs" />
     <Compile Include="Converter\Balance\VisibilityConverter.cs" />
+    <Compile Include="Converter\Summary\GroupSummaryVisibilityConverter.cs" />
+    <Compile Include="Converter\Summary\GroupSummaryAmountConverter.cs" />
+    <Compile Include="Converter\Summary\GroupSummaryTextColorConverter.cs" />
+    <Compile Include="Converter\Summary\GroupSummaryUserTextConverter.cs" />
     <Compile Include="Converter\WebviewNavigationConverter.cs" />
     <Compile Include="Design\DesignDataService.cs" />
     <Compile Include="LoginPage.xaml.cs">
