--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -119,6 +119,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\Enum\FriendFilter.cs" />
     <Compile Include="Model\Enum\GroupFilter.cs" />
     <Compile Include="Model\Group.cs" />
     <Compile Include="Model\GroupDebt.cs" />
