--- a/Split_It/Split_It/project.json
+++ b/Split_It/Split_It/project.json
@@ -7,7 +7,7 @@
     "MvvmLight": "5.2.0",
     "Newtonsoft.Json": "8.0.3",
     "PullToRefresh.UWP": "0.3.4",
-    "WinUX.UWP": "1.3.0"
+    "WinUX.UWP.ValueConverters": "1.3.1"
   },
   "frameworks": {
     "uap10.0": {}
