--- a/Split_It/Split_It/project.json
+++ b/Split_It/Split_It/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "Bezysoftware.Navigation.BackButton": "1.1.0",
     "FubarCoder.RestSharp.Portable": "3.1.3",
     "FubarCoder.RestSharp.Portable.OAuth": "3.1.3",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
