--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -124,6 +124,8 @@
     </Compile>
     <Compile Include="Model\Enum\FriendFilter.cs" />
     <Compile Include="Model\Enum\GroupFilter.cs" />
+    <Compile Include="Model\Expense.cs" />
+    <Compile Include="Model\Friendship.cs" />
     <Compile Include="Model\Group.cs" />
     <Compile Include="Model\GroupDebt.cs" />
     <Compile Include="Model\UserBalance.cs" />
