--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -127,7 +127,7 @@
     <Compile Include="Model\Expense.cs" />
     <Compile Include="Model\Friendship.cs" />
     <Compile Include="Model\Group.cs" />
-    <Compile Include="Model\GroupDebt.cs" />
+    <Compile Include="Model\Debt.cs" />
     <Compile Include="Model\UserBalance.cs" />
     <Compile Include="Model\Currency.cs" />
     <Compile Include="Model\Friend.cs" />
