--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -92,6 +92,7 @@
     <None Include="Data\categories.json" />
     <None Include="Data\currencies.json" />
     <Content Include="Assets\Images\expense_general.png" />
+    <Content Include="Assets\Images\expense_payment.png" />
     <Content Include="Data\sample_group.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -107,6 +108,8 @@
     <Compile Include="Converter\Balance\AmountConverter.cs" />
     <Compile Include="Converter\Balance\BaseConverter.cs" />
     <Compile Include="Converter\EnumToStringConverter.cs" />
+    <Compile Include="Converter\ExpenseDescriptionConverter.cs" />
+    <Compile Include="Converter\ExpenseImageConveter.cs" />
     <Compile Include="Converter\ExpenseWhoPaidConverter.cs" />
     <Compile Include="Converter\Repayment\BaseRepaymentConverter.cs" />
     <Compile Include="Converter\Repayment\RepaymentAmountConverter.cs" />
