group view model

--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -170,6 +170,7 @@
     <Compile Include="ViewModel\BaseEntityDetailViewModel.cs" />
     <Compile Include="ViewModel\ExpenseDetailViewModel.cs" />
     <Compile Include="ViewModel\FriendDetailViewModel.cs" />
+    <Compile Include="ViewModel\GroupDetailViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
