--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -107,6 +107,9 @@
     </Compile>
     <Compile Include="Converter\Balance\AmountConverter.cs" />
     <Compile Include="Converter\Balance\BaseConverter.cs" />
+    <Compile Include="Converter\Comment\CommentTypeFontWeightConverter.cs" />
+    <Compile Include="Converter\Comment\CommentTypeColorConverter.cs" />
+    <Compile Include="Converter\Comment\CommentTypeVisibilityConverter.cs" />
     <Compile Include="Converter\EnumToStringConverter.cs" />
     <Compile Include="Converter\ExpenseDescriptionConverter.cs" />
     <Compile Include="Converter\ExpenseDetailPaidSectionConverter.cs" />
