--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Utils\Constants.cs" />
     <Compile Include="Utils\DeliminatorSeparatedPropertyNamesContractResolver.cs" />
     <Compile Include="Utils\DisplayAttribute.cs" />
+    <Compile Include="Utils\FlyoutHelpers.cs" />
     <Compile Include="Utils\Util.cs" />
     <Compile Include="ViewModel\BaseEntityDetailViewModel.cs" />
     <Compile Include="ViewModel\ExpenseDetailViewModel.cs" />
