use messenger after expense operations

--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Utils\DisplayAttribute.cs" />
     <Compile Include="Utils\FlyoutHelpers.cs" />
     <Compile Include="Utils\Util.cs" />
+    <Compile Include="ViewModel\AddExpenseViewModel.cs" />
     <Compile Include="ViewModel\BaseEntityDetailViewModel.cs" />
     <Compile Include="ViewModel\ExpenseDetailViewModel.cs" />
     <Compile Include="ViewModel\FriendDetailViewModel.cs" />
