--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -109,6 +109,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converter\AddExpense\AvailableDetailsToBackgroudColorConverter.cs" />
+    <Compile Include="Converter\AddExpense\DateTimeToStringConverter.cs" />
     <Compile Include="Converter\Balance\AmountConverter.cs" />
     <Compile Include="Converter\Balance\BaseConverter.cs" />
     <Compile Include="Converter\Comment\CommentTypeFontWeightConverter.cs" />
