populate members from group

--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -114,6 +114,8 @@
     </Compile>
     <Compile Include="Converter\AddExpense\AvailableDetailsToBackgroudColorConverter.cs" />
     <Compile Include="Converter\AddExpense\DateTimeToStringConverter.cs" />
+    <Compile Include="Converter\AddExpense\ListSelectionToMemberConverter.cs" />
+    <Compile Include="Converter\AddExpense\GroupSelectedToMembersConverter.cs" />
     <Compile Include="Converter\Balance\AmountConverter.cs" />
     <Compile Include="Converter\Balance\BaseConverter.cs" />
     <Compile Include="Converter\Comment\CommentTypeFontWeightConverter.cs" />
