--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -143,6 +143,9 @@
     <Compile Include="Converter\Summary\GroupSummaryUserTextConverter.cs" />
     <Compile Include="Converter\WebviewNavigationConverter.cs" />
     <Compile Include="Design\DesignDataService.cs" />
+    <Compile Include="Dialog\WhoPaidDialog.xaml.cs">
+      <DependentUpon>WhoPaidDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Events\ApiErrorEvent.cs" />
     <Compile Include="Events\BaseExpenseChangeEvent.cs" />
     <Compile Include="Events\ExpenseAddedEvent.cs" />
@@ -178,7 +181,9 @@
     <Compile Include="Model\Photo.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\ContentDialogService.cs" />
     <Compile Include="Service\DataService.cs" />
+    <Compile Include="Service\IContentDialogService.cs" />
     <Compile Include="Service\IDataService.cs" />
     <Compile Include="Service\ILoginService.cs" />
     <Compile Include="Service\IWebviewService.cs" />
@@ -198,6 +203,7 @@
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="ViewModel\WhoPaidDialogViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -222,6 +228,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="AddExpensePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialog\WhoPaidDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
