select and refresh who paid

--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Utils\DeliminatorSeparatedPropertyNamesContractResolver.cs" />
     <Compile Include="Utils\DisplayAttribute.cs" />
     <Compile Include="Utils\FlyoutHelpers.cs" />
+    <Compile Include="Utils\SelectAllTextBoxBehavior.cs" />
     <Compile Include="Utils\Util.cs" />
     <Compile Include="ViewModel\AddExpenseViewModel.cs" />
     <Compile Include="ViewModel\BaseEntityDetailViewModel.cs" />
