open expense for editing

--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -169,6 +169,7 @@
     </Compile>
     <Compile Include="Model\Category.cs" />
     <Compile Include="Model\Comment.cs" />
+    <Compile Include="Model\Enum\ExpenseSplit.cs" />
     <Compile Include="Model\Enum\FriendFilter.cs" />
     <Compile Include="Model\Enum\GroupFilter.cs" />
     <Compile Include="Model\Expense.cs" />
