--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -147,6 +147,9 @@
     <Compile Include="Dialog\IOUDialog.xaml.cs">
       <DependentUpon>IOUDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialog\SplitDialog.xaml.cs">
+      <DependentUpon>SplitDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialog\WhoPaidDialog.xaml.cs">
       <DependentUpon>WhoPaidDialog.xaml</DependentUpon>
     </Compile>
@@ -206,6 +209,7 @@
     <Compile Include="ViewModel\ExpenseDetailViewModel.cs" />
     <Compile Include="ViewModel\FriendDetailViewModel.cs" />
     <Compile Include="ViewModel\GroupDetailViewModel.cs" />
+    <Compile Include="ViewModel\SplitDialogViewModel.cs" />
     <Compile Include="ViewModel\IOUDialogViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
@@ -239,6 +243,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Dialog\IOUDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialog\SplitDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
