--- a/Split_It/Split_It/Split_It.csproj
+++ b/Split_It/Split_It/Split_It.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Utils\DeliminatorSeparatedPropertyNamesContractResolver.cs" />
     <Compile Include="Utils\DisplayAttribute.cs" />
     <Compile Include="Utils\FlyoutHelpers.cs" />
+    <Compile Include="Utils\RichTextBlockProperties.cs" />
     <Compile Include="Utils\SelectAllTextBoxBehavior.cs" />
     <Compile Include="Utils\Util.cs" />
     <Compile Include="ViewModel\AddExpenseViewModel.cs" />
@@ -300,7 +301,6 @@
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
   </ItemGroup>
-  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
