--- a/Split_It/Split_It/project.json
+++ b/Split_It/Split_It/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Bezysoftware.Navigation.BackButton": "1.1.0",
+    "Crittercism": "3.0.1",
     "FubarCoder.RestSharp.Portable.OAuth": "3.1.3",
     "FubarCoder.RestSharp.Portable.WebRequest": "3.1.3",
     "HtmlAgilityPack": "1.4.9",
